내 이동거리 수정

--- a/src/html/mypage/SCR_GA_CI_0401_P05.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P05.html
@@ -14,179 +14,214 @@
                 <p class="total-mileage">6,000,000km</p>
                 <p class="percent">지구 둘레의<span>1%</span></p>
             </div>
+			<!-- 20220907 -->
             <div class="navigation">
-                <ol>
-                    <!-- <li class="milestone start"> -->
-                    <li class="milestone start done">
-                        <span class="name">우리집</span>
-                        <span class="dot"></span>
-                        <span class="distance">0km</span>
-                    </li>
-                    <li class="milestone done">
-                        <span class="name">부산</span>
-                        <span class="dot"></span>
-                        <span class="distance">300km</span>
-                        <span class="date-reached">22.01.10</span>
-
-                    </li>
-                    <li class="milestone current">
-                        <span class="name">제주도</span>
-                        <span class="dot"></span>
-                        <span class="distance">500km</span>
-                        <span class="date-reached">22.04.20</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">상해</span>
-                        <span class="dot"></span>
-                        <span class="distance">1,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">대만</span>
-                        <span class="dot"></span>
-                        <span class="distance">1,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">홍콩</span>
-                        <span class="dot"></span>
-                        <span class="distance">2,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">하노이</span>
-                        <span class="dot"></span>
-                        <span class="distance">3,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">방콕</span>
-                        <span class="dot"></span>
-                        <span class="distance">3,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">카트만두</span>
-                        <span class="dot"></span>
-                        <span class="distance">4,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">싱가폴</span>
-                        <span class="dot"></span>
-                        <span class="distance">4,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">자카르타</span>
-                        <span class="dot"></span>
-                        <span class="distance">5,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">뉴델리</span>
-                        <span class="dot"></span>
-                        <span class="distance">5,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">알래스카</span>
-                        <span class="dot"></span>
-                        <span class="distance">6,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">모스크바</span>
-                        <span class="dot"></span>
-                        <span class="distance">6,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">몰디브</span>
-                        <span class="dot"></span>
-                        <span class="distance">7,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">하와이</span>
-                        <span class="dot"></span>
-                        <span class="distance">7,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">카이로</span>
-                        <span class="dot"></span>
-                        <span class="distance">8,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">로마</span>
-                        <span class="dot"></span>
-                        <span class="distance">8,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">파리</span>
-                        <span class="dot"></span>
-                        <span class="distance">9,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">LA</span>
-                        <span class="dot"></span>
-                        <span class="distance">9,500km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">나이로비</span>
-                        <span class="dot"></span>
-                        <span class="distance">10,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">뉴욕</span>
-                        <span class="dot"></span>
-                        <span class="distance">11,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">멕시코시티</span>
-                        <span class="dot"></span>
-                        <span class="distance">12,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">하바나</span>
-                        <span class="dot"></span>
-                        <span class="distance">13,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">이스타섬</span>
-                        <span class="dot"></span>
-                        <span class="distance">14,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">보고타</span>
-                        <span class="dot"></span>
-                        <span class="distance">15,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">리바</span>
-                        <span class="dot"></span>
-                        <span class="distance">16,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">세종기지</span>
-                        <span class="dot"></span>
-                        <span class="distance">17,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">리우</span>
-                        <span class="dot"></span>
-                        <span class="distance">18,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">산티아고</span>
-                        <span class="dot"></span>
-                        <span class="distance">19,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span class="name">코르도바</span>
-                        <span class="dot"></span>
-                        <span class="distance">20,000km</span>
-                    </li>
-                    <li class="milestone">
-                        <span>서울</span>
-                        <span class="dot"></span>
-                        <span>40,000km</span>
-                    </li>
-                    <!-- <li class="milestone finish">
-                        <span>서울</span>
-                        <span class="dot"></span>
-                        <span>40,000km</span>
-                    </li> -->
-                </ol>
+				<div class="module">
+					<div class="dotted"></div>
+					<div class="current-badge" style="left:97.5px"></div>
+					<ol>
+						<li class="milestone start active">
+							<span class="name">우리집</span>
+							<span class="dot"></span>
+							<span class="distance">0km</span>
+							<span class="gauge" style="width:100%"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">부산</span>
+							<span class="dot"></span>
+							<span class="distance">300km</span>
+							<span class="date-reached">22.01.10</span>
+							<span class="gauge" style="width:30%"></span>
+	
+						</li>
+						<li class="milestone">
+							<span class="name">제주도</span>
+							<span class="dot"></span>
+							<span class="distance">500km</span>
+							<span class="date-reached">22.04.20</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">상해</span>
+							<span class="dot"></span>
+							<span class="distance">1,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">대만</span>
+							<span class="dot"></span>
+							<span class="distance">1,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">홍콩</span>
+							<span class="dot"></span>
+							<span class="distance">2,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">하노이</span>
+							<span class="dot"></span>
+							<span class="distance">3,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">방콕</span>
+							<span class="dot"></span>
+							<span class="distance">3,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">카트만두</span>
+							<span class="dot"></span>
+							<span class="distance">4,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">싱가폴</span>
+							<span class="dot"></span>
+							<span class="distance">4,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">자카르타</span>
+							<span class="dot"></span>
+							<span class="distance">5,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">뉴델리</span>
+							<span class="dot"></span>
+							<span class="distance">5,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">알래스카</span>
+							<span class="dot"></span>
+							<span class="distance">6,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">모스크바</span>
+							<span class="dot"></span>
+							<span class="distance">6,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">몰디브</span>
+							<span class="dot"></span>
+							<span class="distance">7,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">하와이</span>
+							<span class="dot"></span>
+							<span class="distance">7,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">카이로</span>
+							<span class="dot"></span>
+							<span class="distance">8,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">로마</span>
+							<span class="dot"></span>
+							<span class="distance">8,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">파리</span>
+							<span class="dot"></span>
+							<span class="distance">9,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">LA</span>
+							<span class="dot"></span>
+							<span class="distance">9,500km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">나이로비</span>
+							<span class="dot"></span>
+							<span class="distance">10,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">뉴욕</span>
+							<span class="dot"></span>
+							<span class="distance">11,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">멕시코시티</span>
+							<span class="dot"></span>
+							<span class="distance">12,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">하바나</span>
+							<span class="dot"></span>
+							<span class="distance">13,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">이스타섬</span>
+							<span class="dot"></span>
+							<span class="distance">14,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">보고타</span>
+							<span class="dot"></span>
+							<span class="distance">15,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">리바</span>
+							<span class="dot"></span>
+							<span class="distance">16,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">세종기지</span>
+							<span class="dot"></span>
+							<span class="distance">17,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">리우</span>
+							<span class="dot"></span>
+							<span class="distance">18,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">산티아고</span>
+							<span class="dot"></span>
+							<span class="distance">19,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">코르도바</span>
+							<span class="dot"></span>
+							<span class="distance">20,000km</span>
+							<span class="gauge"></span>
+						</li>
+						<li class="milestone">
+							<span class="name">서울</span>
+							<span class="distance">40,000km</span>
+						</li>
+						<!-- <li class="milestone finish">
+							<span>서울</span>
+							<span class="dot"></span>
+							<span>40,000km</span>
+						</li> -->
+					</ol>
+				</div>
             </div>
+			<!-- //20220907 -->
         </div>
     </div>
 </div>
