--- a/src/status.html
+++ b/src/status.html
@@ -1349,7 +1349,9 @@
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P05#full">SCR_GA_CI_0401_P05.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">20220906</td>
-                            <td class="date"></td>
+                            <td class="date">
+								20220907
+							</td>
                             <td></td>
                         </tr>
                         <tr>
