고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0401_M01_02.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_02.html
@@ -9,7 +9,7 @@
 
     <div class="layer-body">
         <div class="">
-            <p class="">※ 발급기관(경찰청) 지역을 선택해주세요.</p>
+            <p class="desc-gray">※ 발급기관(경찰청) 지역을 선택해주세요.</p>
             <div class="select-wrap">
                 <button type="button" class="btn line xs active">서울</button>
                 <button type="button" class="btn line xs">부산</button>
