--- a/src/html/customer/SCR_GA_CS_0601_M01.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01.html
@@ -73,7 +73,7 @@
                             <div class="btn-group mt24">
                                 <button type="button" class="btn green lg">접수하기</button>
                             </div>
-                            <p class="mt8">※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
+                            <p class="desc-gray mt8">※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
                         </section>
                     </div>
                 </div>
