--- a/src/html/customer/SCR_GA_CS_0601_M01_05.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_05.html
@@ -56,7 +56,7 @@
                                     id=""
                                     cols="30"
                                     rows="10"
-                                    placeholder="안녕하세요  고객상담 진행 후, 추가 보완서류 요청이 있어서 온라인 서류제출을 진행합니다. 금번 면허증 갱신으로 인해 유효기간 변동이 있어 첨부드리니 확인 후 부탁드립니다. 
+                                    placeholder="안녕하세요. 고객상담 진행 후, 추가 보완서류 요청이 있어서 온라인 서류제출을 진행합니다. 금번 면허증 갱신으로 인해 유효기간 변동이 있어 첨부드리니 확인 후 부탁드립니다. 
                                 "
                                 ></textarea>
                                 <div class="length-count">
