--- a/src/status.html
+++ b/src/status.html
@@ -2135,7 +2135,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_04.html">SCR_GA_CS_0701_M01_04.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2149,7 +2149,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_05.html">SCR_GA_CS_0701_M01_05.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2163,7 +2163,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_06.html">SCR_GA_CS_0701_M01_06.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2191,7 +2191,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_08">SCR_GA_CS_0701_M01_08.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
