고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0701_M01_04.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_04.html
@@ -58,7 +58,7 @@
                             </div>
 
                             <h4 class="mt32">문의내용</h4>
-                            <div class="ip-textarea">
+                            <div class="ip-textarea" style="height: 112px;">
                                 <textarea name="" id="" cols="30" rows="4" placeholder=" "></textarea>
                             </div>
                             <!-- <ul class="list">
