사고접수현황 수정

--- a/src/html/status/SCR_GA_AR_0202_P04.html
+++ b/src/html/status/SCR_GA_AR_0202_P04.html
@@ -15,12 +15,15 @@
                     
 					<div class="status">
 
+						<div class="title-area">
+							<h3 class="title-sm">사고처리 절차</h3>
+						</div>
 						<div class="status-guide">
 							<div class="block">
-								<img src="/images/contents/img_status_guide01.png" alt="사고상황 예시(차대차 기준)">
+								<img src="/images/contents/img_status_guide01.png" alt="사고현장 전체 촬영">
 							</div>
 							<div class="block">
-								<img src="/images/contents/img_status_guide03.png" alt="사고현장 전체 촬영">
+								<img src="/images/contents/img_status_guide03.png" alt="사고상황 예시(차대차 기준)">
 							</div>
 							<div class="block">
 								<img src="/images/contents/img_status_guide04.png" alt="상대차량의 번호판이 나오도록 촬영">
@@ -31,6 +34,29 @@
 							<div class="block">
 								<img src="/images/contents/img_status_guide06.png" alt="사고부위 근접 촬영 B (위와 반대 방향)">
 							</div>
+						</div>
+
+						<div class="notice-txt">
+							<h4 class="title-xs">
+								유의사항
+							</h4>
+							<ul class="list">
+								<li>
+									사고접수는 고객센터 상담원을 통해 유선으로만 가능합니다.
+								</li>
+								<li>
+									상담원과의 사고접수 완료 시 안내메시지가 발송되며, 이후 사고처리현황에서 사고사진을 등록하실 수 있습니다.
+								</li>
+								<li>
+									사고수리에 대한 면책금 안내 및 청구서 발송은 4주 이내 처리됩니다.
+								</li>
+								<li>
+									사고 미신고 시, 차량 손해 면책 보험을 적용 받으실 수  없으며 실 수리비 전액 배상과 휴차료 지불, 법적 조치 및 서비스 이용정지 조치가 이루어집니다.
+								</li>
+								<li>
+									사고 미신고 시, 차량 손해 면책 보험을 적용 받으실 수  없으며 실 수리비 전액 배상과 휴차료 지불, 법적 조치 및 서비스 이용정지 조치가 이루어집니다.
+								</li>
+							</ul>
 						</div>
 
 					</div>
