--- a/src/html/status/SCR_GA_AR_0202_P07.html
+++ b/src/html/status/SCR_GA_AR_0202_P07.html
@@ -76,30 +76,12 @@
 				</h4>
 				<div class="tb-wrap">
 					<table>
-						<caption>청구내역 : 청구일시, 납부일시, 결제수단, 면책금(실수리비용 포함), 휴차보상료에 대한 정보</caption>
+						<caption>청구내역 :  면책금(실수리비용 포함), 휴차보상료에 대한 정보</caption>
 						<colgroup>
 							<col style="width:38%">
 							<col>
 						</colgroup>
 						<tbody>
-							<tr>
-								<th scope="row">청구일시</th>
-								<td class="al-r">
-									2022.05.01 05:20
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">납부일시</th>
-								<td class="al-r">
-									2022.07.31 00:00
-								</td>
-							</tr>
-							<tr>
-								<th scope="row">결제수단</th>
-								<td class="al-r">
-									신용(체크)카드
-								</td>
-							</tr>
 							<tr>
 								<th scope="row">면책금<br>(실수리비용 포함)</th>
 								<td class="al-r">
@@ -125,6 +107,37 @@
 						</tfoot>
 					</table>
 				</div>
+
+				<div class="tb-wrap">
+					<table>
+						<caption>청구내역 : 청구일시, 납부일시, 결제수단에 대한 정보</caption>
+						<colgroup>
+							<col style="width:38%">
+							<col>
+						</colgroup>
+						<tbody>
+							<tr>
+								<th scope="row">청구일시</th>
+								<td class="al-r">
+									2022.05.01 05:20
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">납부일시</th>
+								<td class="al-r">
+									2022.07.31 00:00
+								</td>
+							</tr>
+							<tr>
+								<th scope="row">결제수단</th>
+								<td class="al-r">
+									신용(체크)카드
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
 				<p class="desc">
 					법인명: ㈜그린카 김경봉 (인)<br>사업자등록번호: 220-87-91595<br>소재지: 서울시 강남구 테헤란로 70길 16 (대치동)<br>Tel: 1899-1313 / Fax: 02-6499-2832
 				</p>
@@ -140,7 +153,7 @@
 		<div class="bot-btn-fix">
 			<div class="btn-wrap">
 				<div class="btn-group">
-					<button type="button" class="btn xl">
+					<button type="button" class="btn lg">
 						<i class="ico file-send lg"></i>
 						PDF 파일 전송
 					</button>
