--- a/src/html/status/SCR_GA_AR_0202_T01.html
+++ b/src/html/status/SCR_GA_AR_0202_T01.html
@@ -103,9 +103,9 @@
 						</div>
 
 						<div class="notice-txt">
-							<p class="tit">
+							<h4 class="title-xs">
 								유의사항
-							</p>
+							</h4>
 							
 							<ul class="list">
 								<li>
