--- a/src/html/status/SCR_GA_AR_0202_T02.html
+++ b/src/html/status/SCR_GA_AR_0202_T02.html
@@ -132,9 +132,8 @@
 								</div>
 								<div class="flex">
 									<button type="button" class="btn-link">
-										<span class="under">
-											결제수단 변경
-										</span>
+										<i class="ico refresh lg"></i>
+										결제수단 변경
 									</button>
 								</div>
 							</div>
