--- a/src/html/status/SCR_GA_AR_0202_P05.html
+++ b/src/html/status/SCR_GA_AR_0202_P05.html
@@ -64,7 +64,7 @@
 							<tr>
 								<th scope="row">대여시간</th>
 								<td>
-									2022.04.23 (토) 10:00~2022.04.24 (일) 12:30
+									2022.04.23 (토) 10:00<br>~2022.04.24 (일) 12:30
 								</td>
 							</tr>
 							<tr>
@@ -197,7 +197,7 @@
 		<div class="bot-btn-fix">
 			<div class="btn-wrap">
 				<div class="btn-group">
-					<button type="button" class="btn xl">
+					<button type="button" class="btn lg">
 						<i class="ico file-send lg"></i>
 						PDF 파일 전송
 					</button>
