--- a/src/status.html
+++ b/src/status.html
@@ -2375,7 +2375,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0201_M01.html">SCR_GA_AR_0201_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2389,7 +2389,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_T01.html">SCR_GA_AR_0202_T01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2403,7 +2403,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_T02.html">SCR_GA_AR_0202_T02.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2431,7 +2431,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P01.html">SCR_GA_AR_0202_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2473,7 +2473,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P04.html">SCR_GA_AR_0202_P04.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2487,7 +2487,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P05#full">SCR_GA_AR_0202_P05.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2501,7 +2501,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P06#full">SCR_GA_AR_0202_P06.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2515,7 +2515,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P07#full">SCR_GA_AR_0202_P07.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
