--- a/src/status.html
+++ b/src/status.html
@@ -2346,7 +2346,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0101_M01.html">SCR_GA_AR_0101_M01.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl">
 								20220905
 							</td>
@@ -2362,7 +2362,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0101_P01#full">SCR_GA_AR_0101_P01.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2376,7 +2376,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0201_M01.html">SCR_GA_AR_0201_M01.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2390,7 +2390,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_T01.html">SCR_GA_AR_0202_T01.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2404,7 +2404,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_T02.html">SCR_GA_AR_0202_T02.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2432,7 +2432,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P01.html">SCR_GA_AR_0202_P01.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2474,7 +2474,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0202_P04.html">SCR_GA_AR_0202_P04.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2488,7 +2488,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P05#full">SCR_GA_AR_0202_P05.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2502,7 +2502,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P06#full">SCR_GA_AR_0202_P06.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2516,7 +2516,7 @@
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0202_P07#full">SCR_GA_AR_0202_P07.html</a></td>
 							<td class="stat">⚫</td>
-							<td class="date"></td>
+							<td class="date">20220907</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
