--- a/src/status.html
+++ b/src/status.html
@@ -2608,10 +2608,10 @@
 							<td>옵션정보</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T01.html">SCR_GA_CM_0201_T01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2622,10 +2622,10 @@
 							<td>차량사용법</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T02.html">SCR_GA_CM_0201_T02.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2636,10 +2636,10 @@
 							<td>그린톡</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common.SCR_GA_CM_0201_T03.html">SCR_GA_CM_0201_T03.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2650,10 +2650,10 @@
 							<td>주차장 정보</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0301_T01.html">SCR_GA_CM_0301_T01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2664,10 +2664,10 @@
 							<td>찾아가는 길</td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0301_T02.html">SCR_GA_CM_0301_T02.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2720,9 +2720,9 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0501_M01.html">SCR_GA_CM_0501_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
