공통(cm) -- 작업 중

--- a/src/status.html
+++ b/src/status.html
@@ -2611,7 +2611,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T01.html">SCR_GA_CM_0201_T01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2625,7 +2625,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0201_T02.html">SCR_GA_CM_0201_T02.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2639,7 +2639,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common.SCR_GA_CM_0201_T03.html">SCR_GA_CM_0201_T03.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2653,7 +2653,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0301_T01.html">SCR_GA_CM_0301_T01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2667,7 +2667,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0301_T02.html">SCR_GA_CM_0301_T02.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2722,7 +2722,7 @@
 							<td></td>
 							<td>박지수</td>
 							<td>/common</td>
-							<td><a target="_blank" href="html/common/SCR_GA_CM_0501_M01.html">SCR_GA_CM_0501_M01.html</a></td>
+							<td><a target="_blank" href="html/common/SCR_GA_CM_0601_M01.html">SCR_GA_CM_0601_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
