--- a/src/status.html
+++ b/src/status.html
@@ -2644,6 +2644,34 @@
                             <td class="compl"></td>
 							<td></td>
 						</tr>
+                        <tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>신고하기</td>
+							<td></td>
+							<td>박지수</td>
+							<td>/common</td>
+							<td><a target="_blank" href="components/popup_module.html#common#SCR_GA_CM_0201_T03_01#bottom">SCR_GA_CM_0201_T03_01.html</a></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+                            <td class="compl"></td>
+							<td></td>
+						</tr>
+                        <tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>수정/삭제하기</td>
+							<td></td>
+							<td>박지수</td>
+							<td>/common</td>
+							<td><a target="_blank" href="components/popup_module.html#common#SCR_GA_CM_0201_T03_02#bottom">SCR_GA_CM_0201_T03_02.html</a></td>
+							<td class="stat">⚪</td>
+							<td class="date"></td>
+                            <td class="compl"></td>
+							<td></td>
+						</tr>
 						<tr>
 							<td></td>
 							<td>그린존 안내</td>
@@ -2667,7 +2695,7 @@
 							<td>박지수</td>
 							<td>/common</td>
 							<td><a target="_blank" href="html/common/SCR_GA_CM_0301_T02.html">SCR_GA_CM_0301_T02.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
